--- a/Styles/style.css
+++ b/Styles/style.css
@@ -84,7 +84,7 @@ body {
 }
 #sprite-right > * {
   border: 2px solid black;
-  background-color: goldenrod;
+  background-color: palevioletred;
 }
 #pokemon-img-right {
   padding: 6rem;
@@ -100,10 +100,12 @@ body {
   grid-template-areas: "moves-left moves-right";
   height: auto;
   background-color: blueviolet;
-  padding: 5rem;
 }
 .moves > * {
-  border: 1px solid olivedrab;
+  border: 1px solid black;
+  background-color: olivedrab;
+  height: 100%;
+  width: 100%;
 }
 #moves-left {
   grid-area: moves-left;
@@ -112,10 +114,46 @@ body {
     "pokemon-left-move1 pokemon-left-move2"
     "pokemon-left-move3 pokemon-left-move4";
 }
+/* Moves Left */
+#moves-left > * {
+  padding: 2.5rem;
+  background-color: slategray;
+  border: 1px solid black;
+}
+#moves-left-move1 {
+  grid-area: pokemon-left-move1;
+}
+#moves-left-move2 {
+  grid-area: pokemon-left-move2;
+}
+#moves-left-move3 {
+  grid-area: pokemon-left-move3;
+}
+#moves-left-move4 {
+  grid-area: pokemon-left-move4;
+}
+/* Moves Right */
 #moves-right {
   grid-area: moves-right;
   display: grid;
   grid-template-areas:
     "pokemon-right-move1 pokemon-right-move2"
     "pokemon-right-move3 pokemon-right-move4";
+}
+#moves-right > * {
+  padding: 2.5rem;
+  background-color: antiquewhite;
+  border: 1px solid black;
+}
+#moves-right-move1 {
+  grid-area: pokemon-right-move1;
+}
+#moves-right-move2 {
+  grid-area: pokemon-right-move2;
+}
+#moves-right-move3 {
+  grid-area: pokemon-right-move3;
+}
+#moves-right-move4 {
+  grid-area: pokemon-right-move4;
 }
