--- a/Styles/style.css
+++ b/Styles/style.css
@@ -44,6 +44,18 @@ body {
   padding: 1rem;
   background-color: antiquewhite;
 }
+#healthbar-left-hp {
+  background-color: green;
+  width: 100%;
+  height: 100%;
+  transition: width 0.5s;
+}
+#healthbar-right-hp {
+  background-color: green;
+  width: 100%;
+  height: 100%;
+  transition: width 0.5s;
+}
 .sprite {
   /* Display in middle third of page */
   grid-area: sprite;
